--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "margui",
+  "name": "pannellum-main",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,8 +9,9 @@
     "pannellum-react": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pannellum": "^0.2.14",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.68.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
