--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "pannellum-react": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pannellum": "^0.2.14",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.3",
